--- a/DesignPattern_LinkedIn.ipynb
+++ b/DesignPattern_LinkedIn.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgztFTL8YydV6FL06xLUCZ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPvtrOjS9ZgAon0IyAGLKpW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,11 +132,242 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#"
+        "## Adapter Pattern"
       ],
       "metadata": {
         "id": "aReola2xpFUT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Korean:\n",
+        "   def __init__(self):\n",
+        "    self.name= \"Korean\"\n",
+        "\n",
+        "   def speak_korean(self):\n",
+        "    return \"An-neyong?\"\n",
+        "\n",
+        "class British:\n",
+        "  def __init__(self):\n",
+        "    self.name = \"British\"\n",
+        "\n",
+        "  def speak_english(self):\n",
+        "    return \"Hello!\"\n",
+        "\n",
+        "class Adapter:\n",
+        "  \"\"\"Change generic methods to individualized method names \"\"\"\n",
+        "  def __init__(self,object, **adapted_method):\n",
+        "    self._object = object\n",
+        "    ## Map for  generic method to concrete\n",
+        "    self.__dict__.update(adapted_method)\n",
+        "  def __getattr__(self,attr):\n",
+        "    return getattr(self._object, attr)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8yeh1qJOvaqk"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "objects = []\n",
+        "\n",
+        "korean = Korean()\n",
+        "\n",
+        "british = British()\n",
+        "\n",
+        "objects.append(Adapter(korean, speak=korean.speak_korean))\n",
+        "objects.append(Adapter(british, speak=british.speak_english))\n",
+        "\n",
+        "for obj in objects:\n",
+        "  print(\"{} says '{}'\\n\".format(obj.name, obj.speak()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MJHlRRIAvam7",
+        "outputId": "044ad5e1-e062-451a-9b25-3d5323088c34"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Korean says 'An-neyong?'\n",
+            "\n",
+            "British says 'Hello!'\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Command Pattern"
+      ],
+      "metadata": {
+        "id": "Kkw5uk5z0f0R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Command():\n",
+        "  def execute(self):\n",
+        "    pass\n",
+        "\n",
+        "class Copy(Command):\n",
+        " def execute(self):\n",
+        "    print(\"Copy\")\n",
+        "\n",
+        "class Paste(Command):\n",
+        " def execute(self):\n",
+        "    print(\"Paste\")\n",
+        "\n",
+        "class Save(Command):\n",
+        " def execute(self):\n",
+        "    print(\"Save\")\n",
+        "\n",
+        "class Macro():\n",
+        "  \"\"\"Invoker mechanism to call all commands\"\"\"\n",
+        "  def __init__(self):\n",
+        "    self._commands = []\n",
+        "\n",
+        "  def add(self, command):\n",
+        "    self._commands.append(command)\n",
+        "\n",
+        "  def execute(self):\n",
+        "    for command in self._commands:\n",
+        "      command.execute()\n"
+      ],
+      "metadata": {
+        "id": "fLAZwnxm0nca"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "macro =Macro()\n",
+        "macro.add(Copy())\n",
+        "macro.add(Paste())\n",
+        "macro.add(Save())\n",
+        "macro.execute()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7VPMWv_90nlL",
+        "outputId": "f39c6d76-6070-4ed7-c237-c0513f8c0423"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Copy\n",
+            "Paste\n",
+            "Save\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Interceptor Validator Pattern"
+      ],
+      "metadata": {
+        "id": "DmX3AoBD-ATo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class InterceptValidator:\n",
+        "  def __init__(self) -> None:\n",
+        "    self._validator = None\n",
+        "    self._input = 2 #'t' ##Input to be Validated\n",
+        "\n",
+        "  def set_validator(self,validator):\n",
+        "    self._validator = validator\n",
+        "  def validate(self):\n",
+        "    return self._validator.validate(self._input)\n",
+        "\n",
+        "class NumberValidator():\n",
+        "  \"\"\"Check if input is a number or not\"\"\"\n",
+        "  def validate(self,input):\n",
+        "    int_or_not = None\n",
+        "    try:\n",
+        "      user_input = int(input)\n",
+        "      print(\"Input \"+str(input)+\" is a number\")\n",
+        "      int_or_not = True\n",
+        "    except ValueError:\n",
+        "      print(\"Input \"+str(input)+\" is not a number\")\n",
+        "      int_or_not = False\n",
+        "\n",
+        "    return int_or_not\n"
+      ],
+      "metadata": {
+        "id": "Jz_sBnem-Eqr"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ival = InterceptValidator()\n",
+        "ival.set_validator(NumberValidator())\n",
+        "ival.validate()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TDQd2Plh-Evx",
+        "outputId": "a65d05ac-573e-465c-d048-98148db006d0"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input 2 is a number\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CVJGiT9kDifi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
